data/derived/sp14/progs/unify/prog3029.ml.out
Characters 7-9:
   (sin, 4. * 3.1415);;
         ^^
Error: This expression has type float but an expression was expected of type
         int
